--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>config-util</artifactId>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.wso2telco.ids</groupId>
+            <artifactId>ids-data-publisher</artifactId>
+            <version>2.0.13</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<!--finalName>SessionUpdater</finalName-->
