--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<!--groupId>org.wso2.carbon.identity</groupId> <artifactId>carbon-identity</artifactId> 
-		<packaging>pom</packaging> <version>5.0.8-SNAPSHOT</version> <name>WSO2 Carbon 
-		- Platform Aggregator Pom</name> <url>http://wso2.org</url -->
+    <dependencies>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+    </dependencies>
+    <!--groupId>org.wso2.carbon.identity</groupId> <artifactId>carbon-identity</artifactId>
+        <packaging>pom</packaging> <version>5.0.8-SNAPSHOT</version> <name>WSO2 Carbon
+        - Platform Aggregator Pom</name> <url>http://wso2.org</url -->
 	<parent>
        		<groupId>org.wso2</groupId>
        		<artifactId>wso2</artifactId>
