--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -19,8 +19,8 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.3.0-SNAPSHOT</version>
-                <relativePath>../../parent/pom.xml</relativePath>
+		<version>2.3.0-SNAPSHOT</version>
+		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -30,35 +30,35 @@
 
 	<dependencies>
 		<dependency>
- 			<groupId>org.wso2.carbon.identity</groupId>
- 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
- 		</dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.common</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
-            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.scr.annotations</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>mnc-resolver</artifactId>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>com.wso2telco.core</groupId>
-            <artifactId>config-util</artifactId>
+		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>config-util</artifactId>
 			<scope>provided</scope>
-        </dependency>
+		</dependency>
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>url-shorten</artifactId>
@@ -67,40 +67,40 @@
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>authenticate-selector</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-codec.wso2</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
 
-        <dependency>
-            <groupId>com.wso2telco.ids</groupId>
-            <artifactId>openid-token-builder</artifactId>
+		<dependency>
+			<groupId>com.wso2telco.ids</groupId>
+			<artifactId>openid-token-builder</artifactId>
 			<scope>provided</scope>
-        </dependency>
+		</dependency>
 
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpasyncclient</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore-nio</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-        </dependency>
-	<dependency>
-		<groupId>org.wso2.carbon.identity</groupId>
-		<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
-		<type>jar</type>
-		<scope>provided</scope>
-	</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpasyncclient</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore-nio</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.endpoint.util</artifactId>
@@ -112,16 +112,16 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>com.wso2telco.core</groupId>
-            <artifactId>sp-config-util</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.wso2telco.ids</groupId>
-            <artifactId>ids-data-publisher</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>sp-config-util</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.wso2telco.ids</groupId>
+			<artifactId>ids-data-publisher</artifactId>
+			<version>2.3.0-SNAPSHOT</version>
 			<scope>provided</scope>
-        </dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.hashids</groupId>
 			<artifactId>hashids</artifactId>
@@ -144,35 +144,35 @@
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<!--Bundle-Activator>com.wso2telco.gsma.authenticators.internal.Activator</Bundle-Activator-->
 						<Import-Package>
-							  javax.servlet.http; version="${imp.pkg.version.javax.servlet}",
+							javax.servlet.http; version="${imp.pkg.version.javax.servlet}",
 
-                            org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
-                            org.apache.commons.lang; version="${commons-lang.wso2.osgi.version.range}",
+							org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
+							org.apache.commons.lang; version="${commons-lang.wso2.osgi.version.range}",
 
-                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
-                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
+							org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
+							org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
 
-                            org.wso2.carbon.identity.application.authentication.framework.*;
-                            version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.core.model;
-                            version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.core.util;
-                            version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.application.authentication.framework.*;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.core.model;
+							version="${carbon.identity.package.import.version.range}",
+							org.wso2.carbon.identity.core.util;
+							version="${carbon.identity.package.import.version.range}",
 
-                            org.wso2.carbon.user.api; version="${carbon.user.api.imp.pkg.version.range}",
-                            org.wso2.carbon.user.core; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.user.core.service; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.user.core.util; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.utils.multitenancy; version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.user.api; version="${carbon.user.api.imp.pkg.version.range}",
+							org.wso2.carbon.user.core; version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.user.core.service; version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.user.core.util; version="${carbon.kernel.package.import.version.range}",
+							org.wso2.carbon.utils.multitenancy; version="${carbon.kernel.package.import.version.range}",
 							com.wso2telco.core.config.*
 						</Import-Package>
-						<Export-Package>com.wso2telco.gsma*, com.wso2telco.historylog.*</Export-Package>
+						<Export-Package>com.wso2telco.gsma*, com.wso2telco.historylog.*, com.wso2telco.handlers.*</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
 			</plugin>
-<plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-scr-plugin</artifactId>
 				<version>1.9.0</version>
@@ -190,6 +190,6 @@
 	</build>
 
 	<profiles>
-		
+
 	</profiles>
 </project>
