--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>config-util</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.wso2telco.ids</groupId>
+			<artifactId>common-util</artifactId>
+			<version>2.3.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
