--- a/components/sample-request/pom.xml
+++ b/components/sample-request/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>component-ids</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.4.0-rc1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <packaging>war</packaging>
@@ -69,13 +67,13 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>openid-extension</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId> openid-token-builder</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -101,13 +99,13 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>common-util</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
