--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
 	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
 	the specific language governing permissions and limitations under the License.
    folk test M	-->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <!--groupId>org.wso2.carbon.identity</groupId> <artifactId>carbon-identity</artifactId>
@@ -23,7 +22,7 @@
     <groupId>com.wso2telco.ids</groupId>
     <artifactId>component-ids</artifactId>
     <packaging>pom</packaging>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0-rc1</version>
     <name>WSO2Telco Core - Component</name>
     <description>WSO2Telco Core Aggregate Pom</description>
     <url>http://wso2telco.com</url>
@@ -154,7 +153,7 @@
         <url>https://github.com/WSO2Telco/component-ids.git</url>
         <developerConnection>scm:git:https://github.com/WSO2Telco/component-ids.git</developerConnection>
         <connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
-        <tag>v2_3_0-rc6</tag>
+        <tag>v2.4.0_rc1</tag>
     </scm>
 
 
@@ -1742,7 +1741,7 @@
         <org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
         <hash.ids.version>1.0.1</hash.ids.version>
         <!--from intermediate pom -->
-        <com.wso2telco.ids.version>2.4.0-SNAPSHOT</com.wso2telco.ids.version>
+        <com.wso2telco.ids.version>2.4.0-rc1</com.wso2telco.ids.version>
         <org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
         <org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
         <!--org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version-->
