--- a/components/saa-server/pom.xml
+++ b/components/saa-server/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>component-ids</artifactId>
-        <version>2.4.0-rc1</version>
+        <version>2.4.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
