--- a/components/token-introspection/pom.xml
+++ b/components/token-introspection/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>component-ids</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.4.0-rc1</version>
+        <version>2.4.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
