--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -11,7 +11,7 @@
 <parent>
     <groupId>com.wso2telco.ids</groupId>
     <artifactId>component-ids</artifactId>
-    <version>2.4.0-rc3</version>
+    <version>2.4.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
 </parent>
 
@@ -76,13 +76,13 @@
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>openid-extension</artifactId>
-        <version>2.4.0-rc3</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId> openid-token-builder</artifactId>
-        <version>2.4.0-rc3</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -108,13 +108,13 @@
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>ids-data-publisher</artifactId>
-        <version>2.4.0-rc3</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>common-util</artifactId>
-        <version>2.4.0-rc3</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
