--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids</artifactId>
-		<version>2.4.0-rc3</version>
+		<version>2.4.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -119,13 +119,13 @@
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>ids-data-publisher</artifactId>
-			<version>2.4.0-rc3</version>
+			<version>2.4.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>common-util</artifactId>
-			<version>2.4.0-rc3</version>
+			<version>2.4.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hashids</groupId>
