--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids</artifactId>
-                <version>2.4.0-rc3</version>
+                <version>2.4.0-SNAPSHOT</version>
                 <relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -105,7 +105,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.4.0-rc3</version>
+            <version>2.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>common-util</artifactId>
-            <version>2.4.0-rc3</version>
+            <version>2.4.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 	<build>
